--- a/src/main/resources/templates/view/lotto_contact.html
+++ b/src/main/resources/templates/view/lotto_contact.html
@@ -40,10 +40,10 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
             <div class="inner">
-                <h3 class="masthead-brand"><a class="masthead-brand" href="/">로또 시뮬레이션</a></h3>
+                <h3 class="masthead-brand"><a class="masthead-brand" href="/home">로또 시뮬레이션</a></h3>
                 <nav class="nav nav-masthead justify-content-center">
-                    <a class="nav-link" href="lotto_rule">로또 룰</a>
-                    <a class="nav-link active" href="lotto_contact">연락처</a>
+                    <a class="nav-link" href="rule">로또 룰</a>
+                    <a class="nav-link active" href="contact">연락처</a>
                 </nav>
             </div>
         </header>
