--- a/src/main/resources/templates/view/lotto_rule.html
+++ b/src/main/resources/templates/view/lotto_rule.html
@@ -40,10 +40,10 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
             <div class="inner">
-                <h3 class="masthead-brand"><a class="masthead-brand" href="/">로또 시뮬레이션</a></h3>
+                <h3 class="masthead-brand"><a class="masthead-brand" href="/home">로또 시뮬레이션</a></h3>
                 <nav class="nav nav-masthead justify-content-center">
-                    <a class="nav-link active" href="lotto_rule">로또 룰</a>
-                    <a class="nav-link" href="lotto_contact">연락처</a>
+                    <a class="nav-link active" href="rule">로또 룰</a>
+                    <a class="nav-link" href="contact">연락처</a>
                 </nav>
             </div>
         </header>
@@ -55,7 +55,7 @@
                 그리고 당첨번호를 적으면 구매한 로또 번호와 비교해 <br/> 수익률을 나타내주는 시뮬레이션입니다.
             </p>
             <p class="lead">
-                <a href="/" class="btn btn-lg btn-secondary">게임 시작</a>
+                <a href="/start" class="btn btn-lg btn-secondary">게임 시작!</a>
             </p>
         </main>
 
