[Feature] UI, Spark에서 수동 입력 부분 구현

--- a/src/main/resources/templates/ask.html
+++ b/src/main/resources/templates/ask.html
@@ -25,7 +25,7 @@
     <nav>
         <h1>수동 로또 개수 입력</h1>
     </nav>
-    <form action="/choose" method="post">
+    <form action="/buy" method="post">
         <div>
             <span>수동 개수 입력 : </span>
             <input type="text" name="manualCount" maxlength=3>
