--- a/src/main/resources/templates/lotto_shopping.html
+++ b/src/main/resources/templates/lotto_shopping.html
@@ -18,6 +18,7 @@
       div.lottobuy input {
             max-width: 100px;
       }
+
       #bonus {
             max-width: 20px;
       }
@@ -32,15 +33,15 @@
       <form action="/lottos" method="post">
             <div class="lottobuy">
                   <!-- <input type="hidden" value="{{manualCount}}" /> -->
-                  <input type="text" name="lotto" placeholder="1,2,3,4,5,6" maxlength="20" />
+                  <!-- <input type="text" name="lotto" placeholder="1,2,3,4,5,6" maxlength="20" /> -->
+                  <br>
+                  <textarea name="numbers" rows="5" cols="20"></textarea>
                   <label><strong>ex) 1,2,3,4,5,6 으로 입력해주세요</strong></label>
                   <br />
                   <br />
                   <input type="submit" value="구입" />
             </div>
       </form>
-
-      <script src="./js/form2.js"></script>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
