--- a/src/main/resources/templates/turn_info.html
+++ b/src/main/resources/templates/turn_info.html
@@ -39,7 +39,7 @@
             <br>
         </div>
         <div id="winning">
-            {{turn}} 1회차 우승 로또는 아래와 같습니다
+            {{turn}}회차 우승 로또는 아래와 같습니다
             <br>당첨 번호 : {{winning_lotto.winningLotto}} <br>
             보너스 번호 : {{winning_lotto.bonusNumber}} <br>
         </div>
@@ -52,7 +52,6 @@
             수익률은 {{profit}}% 입니다 <br>
         </div>
     </div>
-
     <form action="/" method="GET">
         <input type="submit" value="되돌아가기" />
     </form>
