[resource] sql 추가

--- a/src/main/resources/templates/lotto_shopping.html
+++ b/src/main/resources/templates/lotto_shopping.html
@@ -39,6 +39,7 @@
                   <label><strong>ex) 1,2,3,4,5,6 으로 입력해주세요</strong></label>
                   <br />
                   <br />
+                  <p><i>충전한 돈만큼만 구매할 수 있어요</i></p>
                   <input type="submit" value="구입" />
             </div>
       </form>
