--- a/src/main/resources/templates/showRounds.html
+++ b/src/main/resources/templates/showRounds.html
@@ -16,16 +16,24 @@
 </head>
 <body>
 <form action="/reset" method="get" accept-charset="UTF-8">
-    <h1>{{round}}회 당첨 통계</h1>
-    <ul class="list-group">
-        {{#each lottoResults.lottoRewards as |value key|}}
-        {{#key.countOfMatch}}
-        <li class="list-group-item">{{key.countOfMatch}}개 일치 ({{key.rewardMoney}})원 - {{value}}개</li>
-        {{/key.countOfMatch}}
-        {{/each}}
-    </ul>
-    총 수익률은 : {{rewardMoney}}입니다.
-    <input type="submit" value="되돌아가기">
+    <div class="container" style="max-width: 500px; margin-top: 30px">
+        <div class="text-center">
+            <h1>{{round}}회 당첨 통계</h1>
+            <ul class="list-group">
+                {{#each lottoResults.lottoRewards as |value key|}}
+                {{#key.countOfMatch}}
+                <li class="list-group-item">{{key.countOfMatch}}개 일치 ({{key.rewardMoney}})원 - {{value}}개</li>
+                {{/key.countOfMatch}}
+                {{/each}}
+            </ul>
+        </div>
+        <div class="text-center">
+            총 수익률은 : {{rewardMoney}}입니다.
+        </div>
+        <div class="text-center">
+            <input class="btn btn-primary" type="submit" value="되돌아가기">
+        </div>
+    </div>
 </form>
 </body>
 </html>
