ADD : Complete Step 5 !!!!!!!!!!!!!!!!!!!!!!!

--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>당첨 번호 입력하기</h1>
-<div>수동으로 {{manualcount}}장, 자동으로 {{autocount}}장 구매하였습니다.</div>
+<div>수동으로 {{manual_count}}장, 자동으로 {{auto_count}}장 구매하였습니다.</div>
 <div>
   {{#lottos}}
   {{this}}
