--- a/src/main/resources/templates/winning_bonus.html
+++ b/src/main/resources/templates/winning_bonus.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>보너스볼 입력하기</h1>
-<div>수동으로 {{manualcount}}장, 자동으로 {{autocount}}장 구매하였습니다.</div>
+<div>수동으로 {{manual_count}}장, 자동으로 {{auto_count}}장 구매하였습니다.</div>
 <div>
   {{#lottos}}
   {{this}}
@@ -15,7 +15,7 @@
 </div>
 <br>
 <br>
-당첨번호 : {{ winningnumber }}
+당첨번호 : {{ winning_numbers }}
 <br>
 <br>
 <form action="/result">
