--- a/src/main/resources/templates/previous_lotto.html
+++ b/src/main/resources/templates/previous_lotto.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 
-	<title>로또</title>
+	<title>로또 - 지난 당첨내역</title>
 </head>
 
 <body class="bg-dark">
@@ -18,13 +18,12 @@
 
 	<div class="container mt-5">
 		<div class="jumbotron">
-			<h3 class="display-4">🎱 Lottery</h3>
+			<h4 class="display-4">지난 당첨내역</h4>
 			<hr class="my-4">
 
 
 			<div class="container" id="purchasing">
 				<a class="btn btn-warning btn-lg btn-block" href="/purchase">로또 구입하기</a>
-				<a class="btn btn-warning btn-lg btn-block" href="/lastwin">지난 주 당첨로또 입력하기</a>
 				<a class="btn btn-warning btn-lg btn-block" href="/purchase">지난 당첨내역 보기</a>
 				<a class="btn btn-warning btn-lg btn-block" href="/purchase">당첨 통계</a>
 			</div>
