refactor: DB로직 메서드로 분리

--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -11,7 +11,7 @@
 <form action="/showLottoInfo">
     <select name="lottoRound">
         {{#rounds}}
-        <option value={{this}} selected="selected">{{this}}</option>
+        <option value={{this}}>{{this}}</option>
         {{/rounds}}
     </select>
     <input type="submit" value="조회"/>
