--- a/src/main/resources/templates/showResult.html
+++ b/src/main/resources/templates/showResult.html
@@ -15,17 +15,19 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<form action="/reset" method="get" accept-charset="UTF-8">
-    <button class="btn btn-dark">당첨통계</button>
-    <ul class="list-group">
-    {{#each lottoResults.lottoRewards as |value key|}}
-        {{#key.countOfMatch}}
-        <li class="list-group-item">{{key.countOfMatch}}개 일치 ({{key.rewardMoney}})원 - {{value}}개</li>
-        {{/key.countOfMatch}}
-    {{/each}}
-    </ul>
-    총 수익률은 : {{rewardMoney}}입니다.
-    <input type="submit" value="되돌아가기">
-</form>
+<div class="container" style="max-width: 500px; margin-top: 30px">
+    <form action="/reset" method="get" accept-charset="UTF-8">
+        <button class="btn btn-dark">당첨통계</button>
+        <ul class="list-group">
+            {{#each lottoResults.lottoRewards as |value key|}}
+            {{#key.countOfMatch}}
+            <li class="list-group-item">{{key.countOfMatch}}개 일치 ({{key.rewardMoney}})원 - {{value}}개</li>
+            {{/key.countOfMatch}}
+            {{/each}}
+        </ul>
+        총 수익률은 : {{rewardMoney}}입니다.
+        <input type="submit" value="되돌아가기">
+    </form>
+</div>
 </body>
 </html>
